# pretty-playground

./: pretty-playground.cabal
app/: Main.hs
data/: record.json
src/Pretty/: Core.hs
test/Pretty/: CoreSpec.hs
